[package]
name = "rpncalc-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version = "0.10.1", features = [ "yew" ] }
js-sys = "0.3.58"
paste = "1.0.7"
log = "0.4.17"
console_log = "0.2.0"
enum_dispatch = "0.3.8"
rpncalc = { path = "../" }
once_cell = "1.13.0"
